[package]
name = "hydrogen"
version = "0.1.0"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "non-blocking epoll tcp socket lib"
repository = "https://github.com/nathansizemore/hydrogen"
readme = "README.md"
keywords = ["epoll", "non-blocking", "socket-server"]
license = "MPL 2.0"

[lib]
name = "hydrogen"

[dependencies]
log = "^0.3.6"
libc = "^0.2.11"
errno = "^0.1.6"
threadpool = "~1.0.0"
simple-slab = "^0.1.0"
