[package]
name = "hydrogen"
version = "0.1.5"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "Multithreaded Linux TCP socket server using epoll."
keywords = ["epoll", "non-blocking", "socket-server"]
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/nathansizemore/hydrogen"
documentation = "https://nathansizemore.github.io/hydrogen/hydrogen/index.html"


[lib]
name = "hydrogen"

[dependencies]
log = "^0.3"
libc = "^0.2"
errno = "^0.1.6"
threadpool = "1"
simple-slab = "^0.2"
