[package]
name = "server"
version = "0.1.0"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "Presence system server crate"

[dependencies]
rand = "*"
num_cpus = "*"

# Deps from git
[dependencies.epoll]
git = "https://github.com/nathansizemore/epoll"

[dependencies.simple-stream]
git = "https://github.com/nathansizemore/simple-stream"
